--- a/rebar.config
+++ b/rebar.config
@@ -1,4 +1,5 @@
 {erl_opts, [debug_info]}.
 
 {deps, [{meck, ".*", {git, "https://github.com/eproxus/meck.git", "master"}},
-        {jsx, ".*", {git, "git://github.com/talentdeficit/jsx.git", "master"}}]}.
+        {jsx, "1.4.5", {git, "https://github.com/whisper1/jsx.git", {tag, "v1.4.5"}}}
+        ]}.
